# talkmateai

./: .dockerignore  Dockerfile  Dockerfile.backend  Dockerfile.frontend  LICENSE  README.md  docker-compose.yml  package.json
apps/client/: next.config.mjs  next.config.ts
apps/client/src/app/: page.tsx
apps/client/src/components/: CameraStream.tsx  TalkingHead.tsx  VoiceActivityDetector.tsx  VoiceVisualizer.tsx
apps/client/src/contexts/: WebSocketContext.tsx
apps/server/: main.py  pyproject.toml
