[project]
name = "talkmateai-server"
version = "0.1.0"
description = "TalkMateAI server application"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "torch==2.6.0",
    "torchvision==0.21.0",
    "soundfile==0.13.1",
    "pillow==11.0.0",
    "scipy==1.15.2",
    "backoff==2.2.1",
    "peft==0.13.2",
    "wheel",
    "packaging",
    "kokoro",
    "requests",
    "websockets",
    "transformers @ git+https://github.com/huggingface/transformers@v4.49.0-SmolVLM-2",
    "accelerate>=1.7.0",
    "pip>=25.1.1",
    "fastapi[standard]>=0.115.6",
    "uvicorn>=0.34.3",
    "whisper>=1.1.10",
]

[project.optional-dependencies]
dev = [
    "black>=24.10.0",
    "pre-commit>=4.0.1",
]

[tool.uv]
index-strategy = "unsafe-best-match"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
include = [
    "*.py",
    "README.md",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
